Gap fix, but better

--- a/topbarprogress.css
+++ b/topbarprogress.css
@@ -4,7 +4,7 @@
     background: rgba(0, 0, 0, .2) !important;
     height: 4px;
     box-shadow: 0 0 3px 0 rgba(0, 0, 0, .6);
-    border: solid 0.01em rgba(248, 248, 242, .1) !important;
+    border-bottom: solid 0.01em rgba(248, 248, 242, .1) !important;
 }
 
 .innerCardFooter,
@@ -13,7 +13,7 @@
     background: rgba(0,0,0,0);
     right: 0;
     left: 0;
-    top: -0.3px;
+    top: 0;
     bottom: 0;
     margin: 0;
 }
